--- a/index.html
+++ b/index.html
@@ -145,5 +145,6 @@ function clearBox(){
 }
 </style>
   <script charset="utf-8" src="./ai.js"></script>
+	 <!--GIThub地址https://github.com/bunian/Pseudo-original-->
  </body>
 </html>
